@@ -35,6 +35,14 @@ Library
 C-API
 -----
 
+Tests
+-----
+
+- Issue #8716: Avoid crashes caused by Aqua Tk on OSX when attempting to run
+  test_tk or test_ttk_guionly under a username that is not currently logged
+  in to the console windowserver (as may be the case under buildbot or ssh).
+
+
 What's New in Python 3.2.1 release candidate 2?
 ===============================================
 
